@@ -1,3 +1,9 @@
+2011-11-09  Tom Tromey  <tromey@redhat.com>
+
+	PR c++/13342:
+	* valops.c (value_full_object): Return early if real type is
+	smaller than the enclosing type.
+
 2011-11-08  Yao Qi  <yao@codesourcery.com>
 
 	* amd64-tdep.c (amd64_relocate_instruction): Make it static.
